@@ -15,6 +15,7 @@
 * Stripe: Support multiple cards on account [pierre]
 * Stripe: Add card_id parameter to unstore call [pierre]
 * Remove usage of `uname -a` [ntalbott]
+* Litle: Allow easier access to the response code [duff]
 
 == Version 1.41.0 (October 24th, 2013)
 
